// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntityRowActions should render 1`] = `
<div>
  <button
    class="button-root btn btn-outline-secondary btn-sm"
    type="button"
  >
    Remove
  </button>
</div>
`;

exports[`EntityRowActions should render with a removed label and undo link 1`] = `
<div>
  <button
    class="button-root btn btn-outline-primary btn-outline-borderless btn-sm"
    type="button"
  >
    Undo
  </button>
  <div
    class="label label-root label-warning label-lg label-uppercase"
  >
    <span
      class="label-item"
    >
      Removed
    </span>
  </div>
</div>
`;

exports[`EntityRowActions should render with an added label and undo link 1`] = `
<div>
  <button
    class="button-root btn btn-outline-primary btn-outline-borderless btn-sm"
    type="button"
  >
    Undo
  </button>
  <div
    class="label label-root label-success label-lg label-uppercase"
  >
    <span
      class="label-item"
    >
      Added
    </span>
  </div>
</div>
`;
